--- a/MetaLearning_Reptile.ipynb
+++ b/MetaLearning_Reptile.ipynb
@@ -6,7 +6,8 @@
       "name": "MetaLearning_Reptile.ipynb",
       "provenance": [],
       "private_outputs": true,
-      "authorship_tag": "ABX9TyPDDozwB+HtH7kAnaK9zXhJ",
+      "collapsed_sections": [],
+      "authorship_tag": "ABX9TyN36MVNsbXtgoMDEsTve95Q",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -31,6 +32,14 @@
         "id": "Jk0GPGVzCeIa"
       },
       "source": [
+        "''''\n",
+        "Srilalitha's Submission\n",
+        "\n",
+        "Created on 10/30/2020\n",
+        "\n",
+        "'''\n",
+        "\n",
+        "# Importing Libraries\n",
         "import matplotlib.pyplot as plt\n",
         "import numpy as np\n",
         "import random\n",
@@ -48,6 +57,8 @@
         "id": "xQRPv-MvCj6i"
       },
       "source": [
+        "# Setting Parameter values\n",
+        "\n",
         "learning_rate = 0.003\n",
         "meta_step_size = 0.25\n",
         "\n",
@@ -72,10 +83,12 @@
         "id": "Lpk2ux09CnSX"
       },
       "source": [
-        "class Dataset:\n",
         "    # This class will facilitate the creation of a few-shot dataset\n",
         "    # from the Omniglot dataset that can be sampled from quickly while also\n",
         "    # allowing to create new labels at the same time.\n",
+        "\n",
+        "class Dataset:\n",
+        "\n",
         "    def __init__(self, training):\n",
         "        # Download the tfrecord files containing the omniglot data and convert to a\n",
         "        # dataset.\n",
@@ -145,7 +158,7 @@
         "\n",
         "import urllib3\n",
         "\n",
-        "urllib3.disable_warnings()  # Disable SSL warnings that may happen during download.\n",
+        "urllib3.disable_warnings()  \n",
         "train_dataset = Dataset(training=True)\n",
         "test_dataset = Dataset(training=False)"
       ],
@@ -184,6 +197,7 @@
         "id": "VVAubaBoC4c_"
       },
       "source": [
+        "# The convolution function\n",
         "def conv_bn(x):\n",
         "    x = layers.Conv2D(filters=64, kernel_size=3, strides=2, padding=\"same\")(x)\n",
         "    x = layers.BatchNormalization()(x)\n",
