--- a/Multi_Task_Learning.ipynb
+++ b/Multi_Task_Learning.ipynb
@@ -5,8 +5,9 @@
     "colab": {
       "name": "Multi-Task-Learning.ipynb",
       "provenance": [],
+      "collapsed_sections": [],
       "machine_shape": "hm",
-      "authorship_tag": "ABX9TyN0QUsyYSj1ju7apS3dHz/0",
+      "authorship_tag": "ABX9TyPh30NDajswFufBPlSIba7s",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2980,6 +2981,13 @@
         }
       },
       "source": [
+        "''''\n",
+        "Srilalitha's Submission\n",
+        "\n",
+        "Created on 10/30/2020\n",
+        "\n",
+        "'''\n",
+        "# Installing Nessesary libraries\n",
         "#!pip install git+https://github.com/huggingface/nlp\n",
         "!pip install transformers==2.11.0\n",
         "!pip install nlp==0.2.0"
@@ -3055,6 +3063,7 @@
         "id": "lPis5pH4RZAe"
       },
       "source": [
+        "# Imported libraries\n",
         "import numpy as np\n",
         "import torch\n",
         "import torch.nn as nn\n",
@@ -3072,6 +3081,7 @@
         "id": "OmHCXs-ORsqw"
       },
       "source": [
+        "# Loading different tasks from dataset\n",
         "dataset_dict = {\n",
         "    \"stsb\": nlp.load_dataset('glue', name=\"stsb\"),\n",
         "    \"rte\": nlp.load_dataset('glue', name=\"rte\"),\n",
@@ -3087,6 +3097,10 @@
         "id": "hEhb2UPKSFxb"
       },
       "source": [
+        "# Displaying the loaded tasks \n",
+        "# stsb consists of two sentences with labels\n",
+        "# rte consists of two sentences with labels\n",
+        "# A common sense question\n",
         "for task_name, dataset in dataset_dict.items():\n",
         "    print(task_name)\n",
         "    print(dataset_dict[task_name][\"train\"][0])\n",
@@ -3101,6 +3115,7 @@
         "id": "KGfx-QJ3SuU4"
       },
       "source": [
+        "# In this class we create a common encoder for all the tasks and split the encoder for different taska by creating different models\n",
         "class MultitaskModel(transformers.PreTrainedModel):\n",
         "    def __init__(self, encoder, taskmodels_dict):\n",
         "        \"\"\"\n",
@@ -3186,6 +3201,7 @@
         }
       },
       "source": [
+        "# We selected roberta model \n",
         "model_name = \"roberta-base\"\n",
         "multitask_model = MultitaskModel.create(\n",
         "    model_name=model_name,\n",
@@ -3199,7 +3215,7 @@
         "        \"rte\": transformers.AutoConfig.from_pretrained(model_name, num_labels=2),\n",
         "        \"commonsense_qa\": transformers.AutoConfig.from_pretrained(model_name),\n",
         "    },\n",
-        ")"
+        ")\n"
       ],
       "execution_count": 9,
       "outputs": [
@@ -3385,6 +3401,7 @@
         }
       },
       "source": [
+        "# printing the weights of the model\n",
         "if model_name.startswith(\"roberta-\"):\n",
         "    print(multitask_model.encoder.embeddings.word_embeddings.weight.data_ptr())\n",
         "    print(multitask_model.taskmodels_dict[\"stsb\"].roberta.embeddings.word_embeddings.weight.data_ptr())\n",
@@ -3436,6 +3453,7 @@
         }
       },
       "source": [
+        "# Data Preprocessing begins here\n",
         "tokenizer = transformers.AutoTokenizer.from_pretrained(model_name)"
       ],
       "execution_count": 11,
@@ -3555,6 +3573,7 @@
       "source": [
         "max_length = 128\n",
         "\n",
+        "# This individual tasks as different functions run different model on encoded data\n",
         "def convert_to_stsb_features(example_batch):\n",
         "    inputs = list(zip(example_batch['sentence1'], example_batch['sentence2']))\n",
         "    features = tokenizer.batch_encode_plus(\n",
@@ -4000,6 +4019,7 @@
         }
       },
       "source": [
+        "# Training starts here\n",
         "train_dataset = {\n",
         "    task_name: dataset[\"train\"] \n",
         "    for task_name, dataset in features_dict.items()\n",
@@ -4261,6 +4281,7 @@
         }
       },
       "source": [
+        "# Validation starts here\n",
         "preds_dict = {}\n",
         "for task_name in [\"rte\", \"stsb\", \"commonsense_qa\"]:\n",
         "    eval_dataloader = DataLoaderWithTaskname(\n",
